@@ -330,6 +330,12 @@ RELEASE 0.97 - XXX
 
   - Fix command-line expansion of Python Value Nodes.
 
+  - Internal cleanups:  Remove an unnecessary scan argument.  Associate
+    Scanners only with Builders, not nodes.
+
+  - Use the correct scanner if the same source file is used for targets in
+    two different environments with the same path but different scanners.
+
   From Levi Stephen:
 
   - Allow $JARCHDIR to be expanded to other construction variables.
